# scilintr

./: .gitignore  README.md  analysis_lint_strategy.md
.github/workflows/: py-check.yaml  r-check.yaml
docs/: failure-modes.md
py/scilintr/: README.md  pyproject.toml
py/scilintr/src/scilintr/: __init__.py  __main__.py  _engine.py  _finding.py  _waivers.py  cli.py  finding.py  lint.py
py/scilintr/src/scilintr/_rules/: __init__.py  _base.py  _degraded_default.py  ambiguous_layer_access.py  broad_exception.py  duplicate_parameter_source.py  duplicate_parameter_source_cross_file.py  hardcoded_design_formula.py  hardcoded_sample_ids.py  implicit_file_selection.py  label_in_blind_stage.py  magic_threshold.py  plot_side_effect_filter.py  positional_metadata_access.py  positional_sample_alignment.py  return_none_on_missing_input.py  runtime_assert.py  sentinel_mask_assignment.py  silent_default_rebind.py  silent_fallback_return.py  silent_pass.py  silent_stub_fallback.py  synthetic_data_generation.py  unannotated_filter.py  unannotated_missingness.py  unannotated_transform.py  unchecked_cache.py  unchecked_merge.py  unchecked_model_fit.py  unconsumed_cli_flag.py  unseeded_stochastic.py  unvalidated_config.py  warning_suppression.py
py/scilintr/tests/: conftest.py  test_ambiguous_layer_access.py  test_broad_exception.py  test_duplicate_parameter_source.py  test_engine.py  test_hardcoded_design_formula.py  test_hardcoded_sample_ids.py  test_implicit_file_selection.py  test_label_in_blind_stage.py  test_magic_threshold.py  test_plot_side_effect_filter.py  test_positional_metadata_access.py  test_positional_sample_alignment.py  test_runtime_assert.py  test_sentinel_mask_assignment.py  test_silent_default_rebind.py  test_silent_fallback_return.py  test_silent_stub_fallback.py  test_smoke.py  test_synthetic_data_generation.py  test_unannotated_filter.py  test_unannotated_missingness.py  test_unannotated_transform.py  test_unchecked_cache.py  test_unchecked_merge.py  test_unchecked_model_fit.py  test_unconsumed_cli_flag.py  test_unseeded_stochastic.py  test_unvalidated_config.py  test_waivers.py  test_warning_suppression.py
r/scilintr/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cran-comments.md
r/scilintr/R/: cli.R  config.R  constants.R  cross_file_rules.R  finding.R  lint.R  per_file_linters.R  project_index.R  rule-R001-positional-access.R  rule-R002-magic-threshold.R  rule-R003-unchecked-join.R  rule-R004-positional-alignment.R  rule-R005-unledger-filter.R  rule-R006-unledger-missingness.R  rule-R007-broad-exception.R  rule-R008-implicit-file-selection.R  rule-R009-stale-cache.R  rule-R010-synthetic-data.R  rule-R011-unseeded-stochastic.R  rule-R012-label-in-blind-stage.R  rule-R013-hardcoded-design-formula.R  rule-R014-unexplained-transform.R  rule-R015-ambiguous-layer.R  rule-R016-hardcoded-sample-id.R  rule-R017-warning-suppression.R  rule-R018-unchecked-convergence.R  rule-R019-plot-data-filter.R  rule-R021-patient-id-in-lib.R  rule-R022-seed-in-loop.R  rule-R023-plot-clip.R  rule-R024-smuggled-default.R  rule-R027-env-validator-asymmetry.R  rule-R028-partial-cache-fingerprint.R  rule-R029-readcsv-mangling.R  rule-R031-magic-eps-floor.R  rule-R032-label-tiebreak.R  (+14 more)
tex/scitexlintr/: LICENSE  README.md  pyproject.toml
(+274 files in other folders)
