[project]
name = "scilintr"
version = "0.1.0"
description = "AST-based scientific code lint for Python analysis projects — flags hidden scientific commitments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arjun Raj", email = "arjunraj@seas.upenn.edu" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
scilintr = "scilintr.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
