[project]
name = "scilintr"
version = "0.1.1"
description = "AST-based scientific code lint for Python analysis projects — flags hidden scientific commitments."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arjun Raj", email = "arjunraj@seas.upenn.edu" }]
keywords = [
    "lint",
    "static-analysis",
    "scientific-computing",
    "data-analysis",
    "reproducibility",
    "code-review",
    "agentic-coding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
scilintr = "scilintr.cli:main"

[project.urls]
Homepage = "https://github.com/arjunrajlaboratory/scilintr"
Repository = "https://github.com/arjunrajlaboratory/scilintr"
Issues = "https://github.com/arjunrajlaboratory/scilintr/issues"
Documentation = "https://github.com/arjunrajlaboratory/scilintr#readme"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
